--- a/.settings/org.eclipse.core.resources.prefs
+++ b/.settings/org.eclipse.core.resources.prefs
@@ -1,4 +1,6 @@
 eclipse.preferences.version=1
+encoding//bole/settings.py=utf-8
+encoding//info/templates/_account_bar.html=UTF-8
 encoding//info/templates/info/_fav_list.html=UTF-8
 encoding//info/templates/info/_hot_list.html=UTF-8
 encoding//info/templates/info/_info_list.html=UTF-8
@@ -7,6 +9,5 @@ encoding//info/templates/info/list.html=UTF-8
 encoding//info/templates/search/search.html=UTF-8
 encoding//info/urls.py=utf-8
 encoding//info/views.py=utf-8
-encoding//templates/_account_bar.html=UTF-8
 encoding//templates/site_base.html=UTF-8
 encoding/<project>=UTF-8
